--- a/package.json
+++ b/package.json
@@ -13,12 +13,20 @@
     "@types/node": "^16.18.16",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "fs": "^0.0.1-security",
+    "nltk": "^0.0.1",
+    "os": "^0.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "syllable": "^5.0.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "util": "^0.12.5",
+    "web-vitals": "^2.1.4",
+    "wink-eng-lite-web-model": "^1.4.3",
+    "wink-nlp": "^1.13.0",
+    "wink-nlp-utils": "^2.1.0",
+    "wink-pos-tagger": "^2.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,5 +51,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/natural": "^5.1.2",
+    "@types/wink-pos-tagger": "^2.2.3",
+    "webpack": "^5.76.2",
+    "webpack-cli": "^5.0.1"
   }
 }
