--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@mantine/core": "^6.0.2",
+    "@mantine/form": "^6.0.2",
     "@mantine/hooks": "^6.0.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -20,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "syllable": "^5.0.1",
+    "twilio": "^4.8.0",
     "typescript": "^4.9.5",
     "util": "^0.12.5",
     "web-vitals": "^2.1.4",
